# lvm

./: .gitignore  CMakeLists.txt  Makefile  README.md
ExampleProgram/: TestOut  easy.lvm  gcd.lvm  isort.lvm  kewl
includes/LittleVirtualMachine/LittleApplication/: LittleMenu.h
includes/LittleVirtualMachine/LittleCompiler/: Binary.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.h  CompilerExceptions.h  FileHelper.h  ICodeGenerator.h  IStreamHelper.h  compiler_states.h
includes/LittleVirtualMachine/LittleInterpeter/: opcodes.h
includes/LittleVirtualMachine/LittleInterpreter/: TypeList.h  has.h  opcodes.h  vmsystem.h
includes/LittleVirtualMachine/LittleShared/: SupportedTypes.h  TypeList.h  opcodes.h
modules/: Fffff.cmake  FindGTest.cmake
src/LittleApplication/: main.cpp
src/LittleCompiler/: CodeGenerator.cpp  main.cpp
src/LittleInterpeter/: main.cpp
src/LittleInterpreter/: main.cpp
test/LittleCompiler/: test_codegenerator.cpp  test_compiler_states.cpp  test_exercise02_binaru.cpp
test/LittleInterpeter/: test_exercise03_Typelist.cpp
